--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,7 @@ jobs:
 
       - name: test
         run: |
-          ./rimeapi.app ./api_test.lua
-          ./rimeapi.app ./levers_api_test.lua
+          ./rimeapi.app test.lua api_test levers_api_test
 
   build-windows:
     runs-on: windows-latest
@@ -79,5 +78,4 @@ jobs:
       - name: run tests
         shell: cmd
         run: |
-          .\rimeapi.app.exe .\api_test.lua
-          .\rimeapi.app.exe .\levers_api_test.lua
+          .\rimeapi.app.exe test.lua api_test levers_api_test
