--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
       - name: test
         run: |
           ./rimeapi.app test.lua api_test levers_api_test
+          ./lua test.lua api_test levers_api_test
 
   build-windows:
     runs-on: windows-latest
@@ -79,3 +80,4 @@ jobs:
         shell: cmd
         run: |
           .\rimeapi.app.exe test.lua api_test levers_api_test
+          .\lua.exe test.lua api_test levers_api_test
