--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,3 +214,45 @@ jobs:
         with:
           name: rimeapi.lua-win${{ matrix.arch }}-dist
           path: ./dist/
+  
+  latest-release:
+    runs-on: ubuntu-latest
+    needs: [build-macos, build-windows]
+    steps:
+      - name: Download macOS artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rimeapi.lua-macos-dist
+          path: ./artifacts/rimeapi.lua-macos-dist
+
+      - name: Download Windows x64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rimeapi.lua-winx64-dist
+          path: ./artifacts/rimeapi.lua-winx64-dist
+
+      - name: Download Windows x86 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rimeapi.lua-winx86-dist
+          path: ./artifacts/rimeapi.lua-winx86-dist
+      
+      - name: Compress zips
+        run: |
+          cd ./artifacts
+          zip -r rimeapi.lua-macos-dist.zip rimeapi.lua-macos-dist
+          zip -r rimeapi.lua-winx64-dist.zip rimeapi.lua-winx64-dist
+          zip -r rimeapi.lua-winx86-dist.zip rimeapi.lua-winx86-dist
+
+      - name: Create latest release
+        if: ${{ github.repository == 'fxliang/rimeapi.lua' && github.ref == 'refs/heads/master' }}
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: latest
+          prerelease: true
+          title: "Nightly Build"
+          files: |
+            ./artifacts/rimeapi.lua-macos-dist.zip
+            ./artifacts/rimeapi.lua-winx64-dist.zip
+            ./artifacts/rimeapi.lua-winx86-dist.zip
