--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,28 +19,44 @@ on:
 jobs:
   build-macos:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        maker: [cmake, xmake]
     steps:
 
       - uses: actions/checkout@v4
         with:
           submodules: true
-      
+
+      - name: install powershell and 7zip
+        run: |
+          brew install --cask powershell
+          brew install p7zip
+
       - name: setup librime
         run: |
-          # get librime 1.14.0 dist
-          wget https://github.com/rime/librime/releases/download/1.14.0/rime-e053fb2-macOS-universal.tar.bz2
-          tar xf rime-e053fb2-macOS-universal.tar.bz2 dist
-          cp -r dist/lib/* ./
-      
+          pwsh ./get-rime.ps1 -use toy -tag latest
+          cp -r lib/* .
+
       - uses: xmake-io/github-action-setup-xmake@v1
+        if: matrix.maker == 'xmake'
         with:
           actions-cache-folder: '.xmake-cache'
 
       - name: build rimeapi.lua
-        id: build_rimeapi_lua
+        if: matrix.maker == 'xmake'
+        id: build_rimeapi_lua_xmake
         run: |
           xmake f -y -p macosx --includedirs=dist/include
           xmake -y
+
+      - name: Build rimeapi.lua with cmake
+        if: matrix.maker == 'cmake'
+        id: build_rimeapi_lua_cmake
+        run: |
+          cmake -Bbuild .
+          cmake --build build --config Release
+          cmake --install build --prefix . --config Release
 
       - name: install luajit
         run: |
@@ -57,6 +73,7 @@ jobs:
           luajit ./rimeapi.app.lua test.lua api_test levers_api_test
 
       - name: prepare artifact
+        if: matrix.maker == 'xmake'
         run: |
           mkdir -p dist
           cp ./rimeapi.app ./dist/
@@ -74,6 +91,7 @@ jobs:
           cp -r ./rime-plugins ./dist/
 
       - name: upload artifact
+        if: matrix.maker == 'xmake'
         uses: actions/upload-artifact@v5
         with:
           name: rimeapi.lua-macos-dist
@@ -81,6 +99,9 @@ jobs:
 
   build-ubuntu:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        maker: [cmake, xmake]
     steps:
 
       - uses: actions/checkout@v4
@@ -136,12 +157,23 @@ jobs:
         run: sudo apt install -y ./librime_1.14.0-1_amd64.deb
 
       - uses: xmake-io/github-action-setup-xmake@v1
+        if: matrix.maker == 'xmake'
         with:
           actions-cache-folder: '.xmake-cache'
 
       - name: build rimeapi.lua
-        id: build_rimeapi_lua
+        if: matrix.maker == 'xmake'
+        id: build_rimeapi_lua_xmake
         run: xmake -y
+
+      - name: Build rimeapi.lua with cmake
+        if: matrix.maker == 'cmake'
+        shell: bash
+        id: build_rimeapi_lua_cmake
+        run: |
+          cmake -Bbuild .
+          cmake --build build --config Release
+          cmake --install build --prefix . --config Release
 
       - name: install luajit
         run: |
@@ -162,11 +194,14 @@ jobs:
     strategy:
       matrix:
         arch: [x64, x86]
+        maker: [cmake, xmake]
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
       - uses: xmake-io/github-action-setup-xmake@v1
+        if: matrix.maker == 'xmake'
+
       - uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: ${{ matrix.arch }}
@@ -176,10 +211,20 @@ jobs:
         run: |
           .\get-rime.ps1 -use toy -tag latest
 
-      - name: Build rimeapi.lua
-        id: build_rimeapi_lua
+      - name: Build rimeapi.lua with xmake
+        if: matrix.maker == 'xmake'
+        id: build_rimeapi_lua_xmake
         run: |
           xmake f -a ${{ matrix.arch }} -y && xmake -y
+
+      - name: Build rimeapi.lua with cmake
+        if: matrix.maker == 'cmake'
+        shell: pwsh
+        id: build_rimeapi_lua_cmake
+        run: |
+          cmake -Bbuild .
+          cmake --build build --config Release
+          cmake --install build --prefix . --config Release
 
       - name: install luajit
         shell: pwsh
@@ -201,6 +246,7 @@ jobs:
           .\lua.exe .\rimeapi.app.lua test.lua api_test levers_api_test
 
       - name: prepare artifact
+        if: matrix.maker == 'xmake'
         run: |
           mkdir dist
           cp ./rimeapi.app.exe ./dist/
@@ -217,11 +263,12 @@ jobs:
           cp ./rime.dll ./dist/
 
       - name: upload artifact
+        if: matrix.maker == 'xmake'
         uses: actions/upload-artifact@v5
         with:
           name: rimeapi.lua-win${{ matrix.arch }}-dist
           path: ./dist/
-  
+
   latest-release:
     runs-on: ubuntu-latest
     needs: [build-macos, build-windows]
@@ -243,7 +290,7 @@ jobs:
         with:
           name: rimeapi.lua-winx86-dist
           path: ./artifacts/rimeapi.lua-winx86-dist
-      
+
       - name: Compress zips
         run: |
           cd ./artifacts
