--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/rime/librime.git
 [submodule "lua5.4"]
 	path = lua5.4
-	url = git@github.com:lua/lua.git
+	url = https://github.com/lua/lua.git
